[gd_scene load_steps=21 format=2]

[ext_resource path="res://scenes/characters/states/character_base_state.gd" type="Script" id=1]
[ext_resource path="res://addons/godot_helper_pack/core/state_machine/state_machine.gd" type="Script" id=2]
[ext_resource path="res://scenes/characters/character_base.gd" type="Script" id=3]
[ext_resource path="res://addons/godot_helper_pack/core/3d/outline_helper_3d.gd" type="Script" id=4]
[ext_resource path="res://assets/images/temp/temp_char_select_icon.png" type="Texture" id=5]
[ext_resource path="res://scenes/ui/components/progress_bar_3d.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/characters/states/character_walk.gd" type="Script" id=7]
[ext_resource path="res://scenes/characters/states/character_interact.gd" type="Script" id=8]
[ext_resource path="res://scenes/characters/states/character_die.gd" type="Script" id=9]
[ext_resource path="res://addons/godot_helper_pack/core/audio/random_audio_stream_player_3d.gd" type="Script" id=10]
[ext_resource path="res://scenes/characters/characte_slection_matrix.tscn" type="PackedScene" id=11]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="Shader" id=11]
code = "shader_type spatial;

render_mode unshaded, shadows_disabled;

//uniform vec4 border_color : hint_color = vec4(.0, .0, .0, 1.);
uniform vec4 background_color : hint_color = vec4(.0, .0, .0, 1.);
uniform vec4 progress_color : hint_color = vec4(.0, 1., .0, 1.);
uniform float progress_value : hint_range(0.0, 1.0, 0.02) = .5;

void vertex()
{
	MODELVIEW_MATRIX = INV_CAMERA_MATRIX * mat4(CAMERA_MATRIX[0],CAMERA_MATRIX[1],CAMERA_MATRIX[2],WORLD_MATRIX[3]);
}

void fragment()
{
	vec2 border = vec2(0.01, 0.1);

	vec2 mask2 = step(border, UV) * step(UV, 1.0-border);
    float mask = mask2.x*mask2.y;

	//float progress = .5;
    float blend = ((UV.x - progress_value) <= 0.0 ? 1.0 : 0.0) * mask;
    vec4 fragColor = progress_color*blend + background_color*(1.0-blend);
	ALBEDO = fragColor.rgb;

}"

[sub_resource type="ShaderMaterial" id=18]
shader = SubResource( 11 )
shader_param/background_color = Color( 0, 0, 0, 1 )
shader_param/progress_color = Color( 0, 1, 0, 1 )
shader_param/progress_value = 0.5

[sub_resource type="QuadMesh" id=12]
resource_local_to_scene = true
material = SubResource( 18 )
size = Vector2( 1, 0.1 )

[sub_resource type="SpatialMaterial" id=16]
resource_local_to_scene = true
albedo_color = Color( 0.623529, 0.054902, 0.854902, 1 )

[sub_resource type="CapsuleMesh" id=13]
resource_local_to_scene = true
material = SubResource( 16 )
radius = 0.5

[sub_resource type="SpatialMaterial" id=17]
albedo_color = Color( 0.00392157, 0.00392157, 0.00392157, 1 )

[sub_resource type="SphereMesh" id=14]
material = SubResource( 17 )
radius = 0.1
height = 0.2

[sub_resource type="CylinderMesh" id=15]
top_radius = 0.2
bottom_radius = 0.1
height = 0.2

[node name="CharacterBase" type="KinematicBody"]
collision_layer = 17
collision_mask = 49
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 1 )
is_starting_state = true

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
navigation_agent = NodePath("../../NavigationAgent")

[node name="Interact" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="NavigationAgent" type="NavigationAgent" parent="."]
target_desired_distance = 0.1
avoidance_enabled = true
neighbor_dist = 5.0

[node name="OutlineHelper3D" type="Node" parent="."]
script = ExtResource( 4 )
selected_indicator = NodePath("../characte_slection_matrix")

[node name="HealthBar" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.53445, 0 )
visible = false
mesh = SubResource( 12 )

[node name="SelectedSprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0 )
visible = false
modulate = Color( 0, 1, 1, 1 )
pixel_size = 0.005
axis = 1
texture = ExtResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
visible = false
mesh = SubResource( 13 )

[node name="Eye1" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.165072, -0.479389, -0.61483 )
mesh = SubResource( 14 )
skeleton = NodePath("../..")

[node name="Eye2" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.165, -0.479389, -0.615 )
mesh = SubResource( 14 )
skeleton = NodePath("../..")

[node name="Mouth" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.39661, -0.28777 )
mesh = SubResource( 15 )
skeleton = NodePath("../..")

[node name="DamagedRandomAudioStreamPlayer3D" type="Spatial" parent="."]
script = ExtResource( 10 )

[node name="characte_slection_matrix" parent="." instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
